# protobuf-format-diff

./: CMakeLists.txt  LICENSE  README.md  comparison.cpp  comparison.h  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/binary_enum_diff/: a.proto  b.proto  diff.json
tests/binary_message_diff/: b.proto  diff.json
tests/enum_added/: a.proto  b.proto  diff.json
tests/enum_removed/: diff.json
tests/enum_value_added/: a.proto  b.proto  diff.json
tests/enum_value_id_changed/: b.proto  diff.json
tests/enum_value_removed/: a.proto  b.proto  diff.json
tests/field_added/: a.proto  b.proto  diff.json
tests/field_default_value_changed/: a.proto  b.proto  diff.json
tests/field_enum_type_changed/: a.proto  b.proto  diff.json
tests/field_enum_type_name_changed/: a.proto  b.proto  diff.json
tests/field_id_changed/: a.proto  b.proto  diff.json
tests/field_label_changed/: b.proto  diff.json
tests/field_message_type_changed/: b.proto  diff.json
tests/field_message_type_name_changed/: a.proto  b.proto  diff.json
tests/field_removed/: a.proto  b.proto  diff.json
tests/field_type_changed/: b.proto  diff.json
tests/msg_added/: diff.json
tests/msg_recursion/: b.proto  diff.json
tests/msg_removed/: b.proto  diff.json
